Fixed visibility

--- a/assets_index/css/main.css
+++ b/assets_index/css/main.css
@@ -3605,10 +3605,10 @@ input, select, textarea {
 		-webkit-justify-content: center;
 		-ms-justify-content: center;
 		justify-content: center;
-		background-image: url("images/gif3.gif"), url("images/pattern-size1.svg");
+		background-image: url("images/gif3.gif");
 		background-position:  center;
 		background-attachment: fixed, fixed;
-		background-size: cover;
+		background-size: 100% auto;
 		background-repeat: no-repeat;
 		height: 100vh;
 		min-height: 35em;
@@ -3830,7 +3830,7 @@ input, select, textarea {
 			transform: translateX(0);
 			opacity: 1;
 			text-align: right;
-			margin: -3.5em 4em 0 0;
+			margin: 0 4em 0 0;
 		}
 
 			#header .content > :last-child {
@@ -3872,7 +3872,7 @@ input, select, textarea {
 		@media screen and (max-width: 1280px) {
 
 			#header {
-				background-image: url("images/overlay.png"), url("images/pattern-size2.svg");
+				/*background-image: url("images/overlay.png"), url("images/pattern-size2.svg");*/
 			}
 
 		}
@@ -3923,7 +3923,7 @@ input, select, textarea {
 		@media screen and (max-width: 736px) {
 
 			#header {
-				background-image: url("images/overlay.png"), url("images/pattern-size3.svg");
+				/*background-image: url("images/overlay.png"), url("images/pattern-size3.svg");*/
 			}
 
 				#header h1 {
